# Speech-Recognitionbased-on-ROS-middleware-for-Mobile-Robots

./: README.md  start.sh
diab_el/: CMakeLists.txt  GUI_ROS.py  GUI_ROS.ui  package.xml
diab_el/src/turtlebot/devel/: .catkin  .rosinstall  setup.sh
diab_el/src/turtlebot/devel/include/create_node/: BatteryState.h  Drive.h  RawTurtlebotSensorState.h  RoombaSensorState.h  SetDigitalOutputsRequest.h  SetDigitalOutputsResponse.h  SetTurtlebotModeRequest.h  SetTurtlebotModeResponse.h  Turtle.h  TurtleBotConfig.h  TurtlebotSensorState.h
diab_el/src/turtlebot/devel/include/turtlebot_actions/: FindFiducialAction.h  FindFiducialActionFeedback.h  FindFiducialActionGoal.h  FindFiducialActionResult.h  FindFiducialFeedback.h  FindFiducialGoal.h  FindFiducialResult.h  TurtlebotMoveAction.h  TurtlebotMoveActionFeedback.h  TurtlebotMoveActionGoal.h  TurtlebotMoveActionResult.h  TurtlebotMoveFeedback.h  TurtlebotMoveGoal.h  TurtlebotMoveResult.h
diab_el/src/turtlebot/devel/include/turtlebot_calibration/: ScanAngle.h
diab_el/src/turtlebot/devel/include/turtlebot_msgs/: PanoramaImg.h  SetFollowStateRequest.h  SetFollowStateResponse.h  (+2 more)
diab_el/src/turtlebot/src/: .rosinstall
diab_el/src/turtlebot/voice_teleop/: voice_teleop.py~
diab_el/src/turtlebot/voice_teleop/config/: TAR4391.tgz  motion_commands.lm  motion_commands.txt
diab_el/src/turtlebot/voice_teleop/launch/: _turtlebot_voice_teleop_gazebo.launch ~  recognizer.launch  recognizer.launch~  turtlebot_voice_teleop_stage.launch  turtlebot_voice_teleop_stage.launch~  voice_teleop.launch  voice_teleop.launch~
(+82 files in other folders)
